# attendance

./: .gitignore  .gitignore.REMOVED.git-id  Capstanfile  Cargo.toml  Dockerfile  Makefile  Makefile.REMOVED.git-id  README.md  README.md.REMOVED.git-id  Rocket.toml  boot.properties  boot.properties.REMOVED.git-id  build.boot  build.boot.REMOVED.git-id  version.properties
migrations/2018-03-18-230839_create_kids/: down.sql  up.sql
resource/: favicon.ico.REMOVED.git-id  index.html.REMOVED.git-id
resource/css/: index.css.REMOVED.git-id
resource/data/: mock_roster.csv  mock_roster.csv.REMOVED.git-id  mock_roster.xlsx.REMOVED.git-id
resource/js/: main.cljs.edn
resources/public/: index.html
resources/public/css/: index.css
resources/public/data/: mock_extra.csv  mock_roster.csv
src/: handler.rs  main.rs
src/clj/attendance/: config.clj  core.clj  data.clj
src/cljc/attendance/: parse.cljc  util.cljc
src/cljs/attendance/: core.cljs  core.cljs.REMOVED.git-id  parse.cljs  parse.cljs.REMOVED.git-id  report.cljs  report.cljs.REMOVED.git-id  roster.cljs.REMOVED.git-id  state.cljs  state.cljs.REMOVED.git-id  ui.cljs  ui.cljs.REMOVED.git-id
src/rs/: csv.rs  db.rs  handler.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs  tests.rs  xlsx.rs
src/rs/db/: init.rs  kids.rs  mod.rs  models.rs  schema.rs
static/css/: index.css
static/data/: mock_roster.csv
static/js/: main.cljs.edn
