[package]
name = "attendance"
version = "0.3.0"
authors = ["deciduously <github@deciduously.com>"]

[lib]
name = "attendance"
path = "src/rs/lib.rs"

[[bin]]
name = "attendance-server"
path = "src/rs/main.rs"

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
diesel = { version = "1.1", features = ["sqlite"] }
r2d2-diesel = "1.0"
r2d2 = "0.8"
dotenv = "0.11"
dotenv_codegen = "0.11"