[package]
name = "attendance"
version = "0.3.1"
authors = ["deciduously <github@deciduously.com>"]

[lib]
name = "attendance"
path = "src/rs/lib.rs"

[[bin]]
name = "attendance-server"
path = "src/rs/main.rs"

[dependencies]
calamine = "0.13.1"
rocket = "0.3"
rocket_codegen = "0.3"
diesel = { version = "1.1", features = ["sqlite"] }
r2d2-diesel = "1.0"
r2d2 = "0.8"